--- a/KH5004CMD Project Notebook Template.ipynb
+++ b/KH5004CMD Project Notebook Template.ipynb
@@ -18599,14 +18599,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Final Random Forest Regressor model trained and saved as 'output/random_forest_model.pkl'\n"
+      "✅ Final Random Forest Regressor model trained and saved as 'output/random_forest_model.pkl' with compression ✅\n"
      ]
     }
    ],
@@ -18636,7 +18636,7 @@
     "]\n",
     "\n",
     "X_final = df[final_features]\n",
-    "y_final = df[\"Price\"]   # 🛑 Predicting Price \n",
+    "y_final = df[\"Price\"]   # 🛑 Predicting Price\n",
     "\n",
     "# --- Drop rows with missing values ---\n",
     "final_data = pd.concat([X_final, y_final], axis=1).dropna()\n",
@@ -18679,9 +18679,9 @@
     "# --- Fit on full cleaned data ---\n",
     "final_model.fit(X_final_clean, y_final_clean)\n",
     "\n",
-    "# --- Save model ---\n",
-    "joblib.dump(final_model, \"output/random_forest_model.pkl\")\n",
-    "print(\"✅ Final Random Forest Regressor model trained and saved as 'output/random_forest_model.pkl'\")\n"
+    "# --- Save model with compression ---\n",
+    "joblib.dump(final_model, \"output/random_forest_model.pkl\", compress=3)\n",
+    "print(\"✅ Final Random Forest Regressor model trained and saved as 'output/random_forest_model.pkl' with compression ✅\")\n"
    ]
   },
   {
